# tuomin

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tuomin/: __init__.py
tests/: test_tuomin.py
