[project]
name = "tuomin"
version = "0.1.1"
description = "Excel 脱敏工具 - 对 xls/xlsx 文件中的个人敏感信息进行替换或重构脱敏"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
]

[project.scripts]
tuomin = "tuomin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tuomin"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
